--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Mark Phillips <mark.phillips1965@googlemail.com>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
