added getCountry function to API, changed coordinates class to be numeric and generate coordinates that googlemaps can process - reduces need for any client side processing

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "log-timestamp": "^0.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
